More JDK 9 collections simplification